# prd-agent-backend

./: .env.example  .gitignore  CLAUDE.md  README.md  ai_system_prompt.md  main.py  pyproject.toml
.circleci/: config.yml
app/: __init__.py  dependencies.py
app/agent/: checkpoint.py  commands.py  graph.py  intent.py  nodes.py  nodes_refactored.py  runtime.py  state.py
app/api/: __init__.py  agent.py  ai.py  auth.py  chats.py  projects.py  users.py  websocket.py
app/core/: config.py
app/db/: __init__.py  database.py
app/middleware/: __init__.py  auth.py
app/models/: __init__.py  ai_models.py  chat.py  project.py  user.py
app/repositories/: base.py  chat.py  cloudinary_storage.py  local_storage.py  project.py  redis_cache.py
app/schemas/: __init__.py  auth.py  base.py  chat.py  project.py  token.py  user.py
app/services/: __init__.py  ai_service.py  auth_service.py  cache_service.py  chat_service.py  project_service.py  rag_service.py  security.py  user_service.py
app/tools/: build_code_index.py
app/websocket/: __init__.py  auth.py  manager.py  publisher.py
docs/: PRD_template.md
tests/: test_flowchart_agent.py  test_intent_classifier.py  test_route_entry.py  test_ws_event_shapes.py
