[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "fastapi>=0.116.1",
    "motor>=3.7.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.10.1",
    "pymongo>=4.14.0",
    "pytest>=8.4.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.35.0",
    "cloudinary>=1.41.0",
    "redis>=5.0.1",
    "aiofiles>=24.1.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-groq>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-pinecone>=0.1.3",
    "langchain-nomic>=0.1.1",
    "langchain-community>=0.2.10",
    "langchain-text-splitters>=0.3.0",
    "httpx>=0.28.1",
    "pinecone-client>=5.0.1",
    "pymupdf>=1.24.10",
    "langgraph>=0.2.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest-asyncio>=1.1.0",
]
